# analysisrun

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PLAN.md  README.md  SPEC.md  documents.md  go.mod  pyproject.toml
.github/workflows/: tagpr.yml
example/benchmark/: __main__.py
example/benchmark/golden/: result.csv
example/benchmark/testimpl/: __main__.py
example/parallel-failure/: __main__.py
example/preprocess/: README.md  __main__.py
example/preprocess/output/: result.csv
example/showschema/: __main__.py
scripts/: docs.py  exec.ps1  install.ps1
src/analysisrun/: __env.py  __init__.py  __pipe.py  __pipeable_io.py  __tar.py  __typing.py  cleansing.py  helper.py  interactive.py  output.py  pipeable.py  pipeable2.py  pipeable_io.py  runner.py  scanner.py  tar.py  test.py  typing.py
tests/: GUIDELINE.md  benchmark.py  test_cleansing.py  test_helper.py  test_interactive.py  test_pipe.py  test_pipeable.py  test_pipeable_io.py  test_run_analysis.py  test_scanner.py  test_streaming_error.py  test_tar.py
tests/testdata/: image_analysis_result.csv  samples.csv
tests/testdata/results/: result.csv
tests/testimpl/: __init__.py  __main__.py
tests/testimpl/orchestrator/: main.go
tests/testresult/: result.csv
