[project]
name = "analysisrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cowsay>=6.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysisrun"]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.4.0",
]
